--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,33 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Alleviato</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarsExample02">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+            <l1><%= link_to "Home", blogs_path %></l1>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <ul class="navbar-brand">
+        <l1><%= link_to "Sign Up", new_user_registration_path %></l1>
+        <% if user_signed_in? %>
+          <l1><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></l1>
+        <% else %>
+          <l1><%= link_to "Log In", new_user_session_path %></l1>
+
+        <% end %>
+      </ul>
+    </div>
+  </nav>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
     <div class="container">
     <%= yield %>
   </div>
