--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,9 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarsExample02">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav">
+        <li>
             <l1><%= link_to "Home", blogs_path %></l1>
         </li>
       </ul>
