homepage framework added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,8 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav">
         <li>
-            <l1><%= link_to "Home", blogs_path %></l1>
+            <l1><%= link_to "Home", root_path %></l1>
+              <l1><%= link_to "Blog", blogs_path %></l1>
         </li>
       </ul>
     </div>
