--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,17 @@
         </li>
       </ul>
     </div>
+    <div class="btn-group">
+  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Features
+  </button>
+  <ul class="dropdown-menu">
+      <li><%= link_to "Share Books", books_path ,class: "link" %></li>
+      <li><%= link_to "Question Papers", new_user_registration_path,class: "link"  %></li>
+      <li><%= link_to "Study Sessions", new_user_registration_path ,class: "link" %></li>
+      <li><%= link_to "Order Items",  new_user_registration_path,class: "link" %></li>
+  </ul>
+</div>
     <div>
       <ul class="navbar-brand">
         <l1><%= link_to "Sign Up", new_user_registration_path %></l1>
