--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,7 +5,7 @@
   <p>Title : <%= f.title %></p>
 	<p>Author : <%= f.author %></p>
   <p>Description : <%= f.description %></p>
-  <p>Uploaded By : <%= f.user_id %></p>
+  <p>Uploaded By : <%= f.user_name %></p>
   <%= link_to "Buy" , books_path %>
 </div>
 	<hr>
