--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
   <ul class="dropdown-menu">
       <li><%= link_to "Share Books", books_path ,class: "link" %></li>
       <li><%= link_to "Question Papers", new_user_registration_path,class: "link"  %></li>
-      <li><%= link_to "Study Sessions", new_user_registration_path ,class: "link" %></li>
+      <li><%= link_to "Study Sessions", tutors_path ,class: "link" %></li>
       <li><%= link_to "Order Items",  new_user_registration_path,class: "link" %></li>
   </ul>
 </div>
