--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -2,6 +2,7 @@
 
 	<%= f.input :title, label: "Book Title" %>
 	<%= f.input :description %>
+	<%= f.input :price %>
 	<%= f.input :author %>
 	<%= f.button :submit  %>
 <% end %>
